opam-version: "2.0"
name: "stlib-theme"
version: "0.1"
synopsis: "An theme mimicking ocaml manual's theme"
description: """
This is a theme with the same look as OCaml manual's theme.
"""
maintainer: "Heyji <heyji2@gmail.com>"
author: "Heyji <heyji2@gmail.com>"
license: "ISC"
homepage:"https://github.com/Heyji2/stdlib-theme"
bug-reports:"https://github.com/Heyji2/stdlib-theme/issue"
dev-repo:"git+https://github.com/Heyji2/stdlib-theme"
depends: ["odoc" {>="3.0.0"} "odig" {>="0.0.9"}]
depopts: []
install: [
    ["mkdir" "%{stdlib-theme:share}%/odoc/odoc-theme/%{name}%"]
    ["mv" "odoc.css" "%{stdlib-theme:share}%/odoc/odoc-theme/%{name}%/odoc.css"]
]

